2002-02-07  Anders Carlsson  <andersca@gnu.org>

	* gdk/x11/xsettings-common.c (xsettings_setting_free): Free 
	the setting name.

Wed Feb  6 23:28:39 2002  Kristian Rietveld  <kris@gtk.org>

	Fixes #70708

	* gtk/gtktreeview.c (gtk_tree_view_get_path_at_pos): we're dealing
	with widget coordinates here, so take the header height into
	account while converting
	(gtk_tree_view_widget_to_tree_coords): take header height into
	account
	(gtk_tree_view_tree_to_widget_coords): ditto
	(gtk_tree_view_get_dest_row_at_pos): we were passing coords
	relative to the tree with _get_path_at_pos, while that function
	wants coords relative to the widget

2002-02-06  Havoc Pennington  <hp@redhat.com>

	* gtk/gtktextview.c (gtk_text_view_scroll_hpages): remove unused variable
	(gtk_text_view_get_window): add warning about how you
	can't get the private window. #70683, and avoid default: in the
	switch so we get "enum value unhandled" warnings

2002-02-06  Havoc Pennington  <hp@redhat.com>

	* gtk/gtktextchild.c: Add warnings if you try to use a child
	anchor that isn't inside a buffer. Really kind of lame; 
	we should separate the anchor from the buffer. But not worth 
	fixing for now. #70601

Wed Feb  6 18:25:24 2002  Kristian Rietveld  <kris@gtk.org>

	* gtk/gtktreemodelsort.c: rip out all the debugging ifdefs, as
	modelsort seems to be stable (and nobody complained :)

Tue Feb  5 19:13:42 2002  Owen Taylor  <otaylor@redhat.com>

	* gdk/x11/gdkgeometry-x11.c (gdk_window_queue): Keep
	the length of the anti-expose queue finite, by if
	it gets too long, first doing a XSync() and checking
	the event queue, and if that doesn't work, simply
	discarding all anti-expose items in the queue.

	* gdk/x11/gdkdnd-x11.c (gdk_window_cache_filter): Fix ordering
	on ConfigureNotify (#56349, Thomas Leonard)

2002-02-05  Havoc Pennington  <hp@redhat.com>

	* gtk/gtkimage.c (gtk_image_expose): offset area being gotten from
	pixmap by the align/padding offsets, so we don't get warnings