@@ -387,7 +387,7 @@ struct _GtkWidgetClass
 				    guint               time);
 
   /* Signals used only for keybindings */
-  void (* popup_menu)              (GtkWidget          *widget);
+  gboolean (* popup_menu)          (GtkWidget          *widget);
 
   /* If a widget has multiple tooltips/whatsthis, it should show the
    * one for the current focus location, or if that doesn't make
